--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -1,157 +1,39 @@
 \documentclass[11pt,a4paper]{article}
-\usepackage{jheppub,multirow}
-\usepackage{float}
-\usepackage{graphicx}
-\usepackage{url}
-\usepackage{cancel}
-\usepackage{slashed}
-\usepackage{placeins}
-\usepackage{soul} % For strikeout, using  \st{Hellow world}
-%\usepackage[T1]{fontenc}
-\usepackage{bm}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{listings}
-%\usepackage{axodraw4j}
-\usepackage[toc, page]{appendix}
-%\usepackage{pstricks}
-\usepackage{color}
-\usepackage{booktabs} % for tables
-\usepackage{pgf}
-\usepackage{empheq}
 
-%%%%%%%% JAMES %%%%%%%%%%%
-\usepackage{lipsum}
-\usepackage{tabularx}
-%\usepackage[usenames, dvipsnames]{color}
-\usepackage{subfigure}
-\usepackage{pgf}
-
-%Vectors
-\renewcommand{\vec}[1]{\textbf{#1}}
-%Bras and Kets
- \usepackage{braket}
- %Lists
- \usepackage[inline]{enumitem} 
- %Rules
- \newcommand{\minirule}{\begin{center}\rule{0.7\textwidth}{.4pt}\end{center}}
-  %Real and imaginary parts
-\renewcommand{\Re}{\operatorname{Re}}
-\renewcommand{\Im}{\operatorname{Im}}
-%Fun symbols
-\usepackage{pifont}
-\usepackage{array}
-\newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
-\usepackage{amsthm}
-%Hyperlinks
-\usepackage{hyperref}
- \hypersetup{
-    colorlinks=true,
-    linkcolor=blue,
-    filecolor=black,      
-    urlcolor=blue,
-}
-%Tensor indices
-\usepackage{tensor}
-\usepackage{slashed} %Slash notation
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% Definitions
-\newcommand{\order}{{\cal O}}
-\newcommand{\nn}{\nonumber}
-\newcommand{\MM}[1]{{\bf\color{blue}MM: #1}}
-\newcommand{\MU}[1]{{\bf\color{red}MU: #1}}
-\newcommand{\JM}[1]{{\bf\color{cyan}JM: #1}}
-\newcommand{\amc}{{\sc MadGraph5\_aMC@NLO}}
-\newcommand{\amcfast}{{\sc aMCfast}}
-\newcommand{\applgrid}{{\sc APPLgrid}}
-\newcommand{\msbar}{\overline{\mbox{\small MS}}}
-\def\db{\hat{D}_b}
-\def\d{\hat{D}}
-\def\mp{{\bf \hat{M}_+}}
-\def\mm{{\bf \hat{M}_-}}
-\def\G1{{\bf \gamma^{(1)}_N}}
-\newcommand{\kz}{K_z}
-\DeclareMathOperator*{\argmax}{arg\,max}
-\DeclareMathOperator*{\argmin}{arg\,min}
-\def\gsim{\gtrsim}
-\def\lsim{\lesssim}
-
-\newcommand{\eL}{\epsilon_L}
-\newcommand{\eR}{\epsilon_R}
-\newcommand{\eSL}{\epsilon_{S_L}}
-\newcommand{\eSR}{\epsilon_{S_R}}
-\newcommand{\eT}{\epsilon_T}
-\def\slashp{p \!\!\! \slash}
-\def\slashs{s \!\!\! \slash}
-\def\slashE{E \!\!\! \slash}
-
-\renewcommand{\O}{\mathcal{O}}
-\newcommand{\g}{\gamma}
-
-\definecolor{violet}{cmyk}{0,1,0,0.2}
-
-\usepackage[font=small,labelfont=bf,labelsep=period]{caption}
-\setlength{\unitlength}{1mm}
-
-\usepackage{tabularx}
-\newcolumntype{C}[1]{>{\centering\arraybackslash}p{#1}}
-\def\smallfrac#1#2{\hbox{$\frac{#1}{#2}$}}
-\newcommand{\be}{\begin{equation}}
-\newcommand{\ee}{\end{equation}}
-\newcommand{\bea}{\begin{eqnarray}}
-\newcommand{\eea}{\end{eqnarray}}
-\newcommand{\bi}{\begin{itemize}}
-\newcommand{\ei}{\end{itemize}}
-\newcommand{\ben}{\begin{enumerate}}
-\newcommand{\een}{\end{enumerate}}
-\newcommand{\la}{\left\langle}
-\newcommand{\ra}{\right\rangle}
-\newcommand{\lc}{\left[}
-\newcommand{\rc}{\right]}
-\newcommand{\lp}{\left(}
-\newcommand{\rp}{\right)}
-\newcommand{\as}{\alpha_s}
-
-\numberwithin{equation}{section}
-\numberwithin{figure}{section}
-\numberwithin{table}{section}
+% Settings and shortcuts
+\input{incl_settings.tex} 
+\input{incl_shortcuts.tex}
 
 \title{A critical assessment of uncertainty estimate}
+
 \author[a]{Nina Elmer}
-\author[a]{, Sven Krippendord}
+\author[a]{, Sven Krippendorf}
 \author[a]{, Maria Ubiali + ...}
 \affiliation[a]{DAMTP, University of Cambridge, Wilberforce Road, Cambridge, CB3 0WA, United Kingdom}
 \emailAdd{M.Ubiali@damtp.cam.ac.uk...}
 
 \abstract{Something... }
 
-
 \keywords{NTK, NN, Gaussian Process...}
 \arxivnumber{2507.xxxxx}
-%
 
 \begin{document}
-
-\maketitle
-\flushbottom
-
-\section{Introduction}
-Add references like Colibri~\cite{Costantini:2025agd}.
-
-
-\section*{Acknowledgments}
-We are very grateful to ...
-
-\newpage
-
-%\appendix
-%\input{app-split}
-
-\renewcommand{\em}{}
-\bibliographystyle{UTPstyle}
-\bibliography{references}
-
+	
+	\maketitle
+	\flushbottom
+	
+	\section{Introduction}
+	Add references like Colibri~\cite{Costantini:2025agd}.
+	
+	\section*{Acknowledgments}
+	We are very grateful to ...
+	
+	\newpage
+	
+	%\appendix
+	%\input{app-split}
+	
+	\bibliographystyle{UTPstyle}
+	\bibliography{references}
+	
 \end{document}
-
-
