--- a/notes/references.bib
+++ b/notes/references.bib
@@ -7,3 +7,67 @@
     month = "10",
     year = "2025"
 }
+
+@article{Medrano:2025cmg,
+	author = "Medrano, Yamil Cahuana and Dutrieux, Herv{\'e} and Karpie, Joseph and Orginos, Kostas and Zafeiropoulos, Savvas",
+	title = "{Gaussian Processes for Inferring Parton Distributions}",
+	eprint = "2510.21041",
+	archivePrefix = "arXiv",
+	primaryClass = "hep-lat",
+	month = "10",
+	year = "2025"
+}
+
+@article{Lee_2020,
+	title={Wide neural networks of any depth evolve as linear models under gradient descent
+	*},
+	volume={2020},
+	ISSN={1742-5468},
+	url={http://dx.doi.org/10.1088/1742-5468/abc62b},
+	DOI={10.1088/1742-5468/abc62b},
+	number={12},
+	journal={Journal of Statistical Mechanics: Theory and Experiment},
+	publisher={IOP Publishing},
+	author={Lee, Jaehoon and Xiao, Lechao and Schoenholz, Samuel S and Bahri, Yasaman and Novak, Roman and Sohl-Dickstein, Jascha and Pennington, Jeffrey},
+	year={2020},
+	month=dec, pages={124002} 
+}
+
+
+@article{Candido:2024hjt,
+	author = "Candido, Alessandro and Del Debbio, Luigi and Giani, Tommaso and Petrillo, Giacomo",
+	title = "{Bayesian inference with Gaussian processes for the determination of parton distribution functions}",
+	eprint = "2404.07573",
+	archivePrefix = "arXiv",
+	primaryClass = "hep-ph",
+	doi = "10.1140/epjc/s10052-024-13100-1",
+	journal = "Eur. Phys. J. C",
+	volume = "84",
+	number = "7",
+	pages = "716",
+	year = "2024"
+}
+
+@article{Halverson:2020trp,
+	author = "Halverson, James and Maiti, Anindita and Stoner, Keegan",
+	title = "{Neural Networks and Quantum Field Theory}",
+	eprint = "2008.08601",
+	archivePrefix = "arXiv",
+	primaryClass = "cs.LG",
+	doi = "10.1088/2632-2153/abeca3",
+	journal = "Mach. Learn. Sci. Tech.",
+	volume = "2",
+	number = "3",
+	pages = "035002",
+	year = "2021"
+}
+
+@article{DelDebbio:2024qfh,
+	author = "Del Debbio, Luigi and Naviglio, Manuel and Tarantelli, Francesco",
+	title = "{Neural Networks Asymptotic Behaviours for the Resolution of Inverse Problems}",
+	eprint = "2402.09338",
+	archivePrefix = "arXiv",
+	primaryClass = "physics.comp-ph",
+	month = "2",
+	year = "2024"
+}
