--- a/test_toyGP.ipynb
+++ b/test_toyGP.ipynb
@@ -20,6 +20,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9f133901",
+   "metadata": {},
+   "source": [
+    "# First part: known $f_2$ and unknown $f_1$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0d7db050",
    "metadata": {},
    "source": [
@@ -407,6 +415,14 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d8e35ae",
+   "metadata": {},
+   "source": [
+    "# Second part: known $f_1$ and unknown $f_2$"
    ]
   },
   {
