Adding kernel description to the notes and cleaned up toy notebook.

--- a/notes/incl_shortcuts.tex
+++ b/notes/incl_shortcuts.tex
@@ -50,3 +50,6 @@
 \newcommand{\lp}{\left(}
 \newcommand{\rp}{\right)}
 \newcommand{\as}{\alpha_s}
+
+\newcommand{\NE}[1]{{\color{blue}#1}}
+\newcommand{\NEc}[1]{{\color{blue}[NE: #1]}}
