--- a/notes/references.bib
+++ b/notes/references.bib
@@ -71,3 +71,17 @@
 	month = "2",
 	year = "2024"
 }
+
+@article{DelDebbio:2007ee,
+    author = "Del Debbio, Luigi and Forte, Stefano and Latorre, Jose I. and Piccione, Andrea and Rojo, Joan",
+    collaboration = "NNPDF",
+    title = "{Neural network determination of parton distributions: The Nonsinglet case}",
+    eprint = "hep-ph/0701127",
+    archivePrefix = "arXiv",
+    reportNumber = "UB-ECM-PF-06-17, IFUM-882-FT, GEF-TH-01-2007",
+    doi = "10.1088/1126-6708/2007/03/039",
+    journal = "JHEP",
+    volume = "03",
+    pages = "039",
+    year = "2007"
+}
